# terminal-equalizer

./: .gitignore  CMakeLists.txt  CONTRIBUTORS.md  README.md  q
assets/: icon.blender-2.79.blend
inc/: SignalProcessor.hpp  engine.hpp  main.h  main.hpp  visualizer.hpp
inc/audio/: engine.hpp
inc/math/: fft.hpp
inc/processing/: signal_processor.hpp
inc/settings/: settings.h  settings.hpp
inc/ui/: visualizer.hpp
src/: engine.cpp  fft.cpp  main.cpp  settings.cpp  signal_processor.cpp  visualizer.cpp
src/tests/: fft.cpp  signal_processor_test.cpp  signal_processor_test2.cpp
